objects/chargebeeapps__Subscription_Addon__c.object
<CustomObject>
    <fields>
        <fullName>chargebeeapps__Billing_Cycles__c</fullName>
        <label>Billing Cycles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subscription Addons</relationshipLabel>
        <relationshipName>Subscription_Addons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Subscription__c</fullName>
        <label>CB Subscription</label>
        <referenceTo>chargebeeapps__CB_Subscription__c</referenceTo>
        <relationshipLabel>Subscription Addons</relationshipLabel>
        <relationshipName>Subscription_Addons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <label>Subscription Addon</label>
    <nameField>
        <label>Subscription Addon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Addons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>